<resources>
    <string name="app_name">ClickClick</string>

    <string name="key_code">Key Code : %1$d</string>
    <string name="key_name">Key Name : %1$s</string>
    <string name="key_device_id">Device Id : %1$d</string>
    <string name="key_device_name">Device Name : %1$s</string>
    <string name="key_ignore_device">Ignore device info</string>
    <string name="key_event_activity_tips">Please press key…</string>
    <string name="btn_add">Add</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="title_activity_navi">ClickClick</string>
    <string name="title_bindings">Bindings</string>
    <string name="title_functions">Functions</string>
    <string name="title_settings">Settings</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="action_add_description">Click to add a profile</string>
    <string name="settings_version_summary" translatable="false">1.0.0</string>
    <string name="settings_about_title">About</string>
    <string name="settings_version_title">Version</string>
    <string name="settings_author_title">Author</string>
    <string name="settings_author_summary">IMXQD</string>
    <string name="accessibility_service_title">ClickClick(Keymap Service)</string>
    <string name="accessibility_description">ClickClick needs this permission to intercept key events. \nClickClick promises not to collect any user privacy related data.</string>
    <string name="settings_app_switch_bindings">KeyEvent bindings</string>
    <string name="settings_app_switch_on_summary">Keymap service is running.</string>
    <string name="settings_app_switch_off_summary">Keymap service stoped.</string>
    <string name="settings_key_app_debug_title">Display debugging information</string>
    <string name="settings_key_debug_category_title">Debug</string>
    <string name="open_service_success">Keymap service started.</string>
    <string name="open_notification_service_success">Notification service started.</string>
    <string name="open_service_interrupt">Keymap service war interrupted!</string>
    <string name="open_notification_service_disconnected">Notification service war interrupted!</string>
    <string name="settings_root_mode_title">ROOT mode</string>
    <string name="settings_root_mode_on_summary">Turned on. ClickClick can work when the screen off.</string>
    <string name="settings_root_mode_off_summary">Turned off. ClickClick may no work when the screen off.</string>
    <string name="settings_notification_title">Notification service</string>
    <string name="settings_notification_on_summary">Turned on. Support for notification funcations.</string>
    <string name="settings_notification_off_summary">Turned off. Notification funcations can\'t work</string>
    <string name="profile_current_state" formatted="true">%1$d binding(s) are active</string>
    <string name="function_current_state" formatted="true">%1$d function(s) are defined</string>
    <string name="add_key_event_failed">Error : Conflict with existing items</string>
    <string name="settings_quick_click_time_title">Double-click / triple-click speed</string>
    <string name="settings_long_click_time_title">Long-click speed</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_what_intent_message">What is your intent ?</string>
    <string name="run_it">Run It</string>
    <string name="delete">Delete</string>
    <string name="notification_service_error">Notification Service Error !</string>
    <string name="accessibility_error">Accessibility Service Error !</string>
    <string name="add_internal_func">Add built-in functions</string>
    <string name="add_func_from_web">Add functions from the internet</string>
    <string name="add_func_name_description_hint">Function Introduction</string>
    <string name="add_func_name_code_hint">Function Code</string>
    <string name="add_func_by_self">Add Custom Functions (Advanced))</string>
    <string name="can_not_be_empty">Can not be empty</string>
    <string name="run_failed">Failed to execute</string>
    <string name="run_successed">Exexuted successfully</string>
    <string name="save_successed">"Saved successfully "</string>
    <string name="save_failed">Failed to save, may already exist</string>
    <string name="open_error">Wrong data format</string>
    <string name="title_activity_functions">Functions</string>
    <string name="no_data">No data</string>
    <string name="app_version_too_old">App version is too old, this function requires more than %1$s</string>
    <string name="please_click_the_notification_item">Please click the button on the notification within 15 seconds</string>
    <string name="alert_notify_message"><![CDATA[<b>App Name:</b> %1$s<br/><b>Package:</b> %2$s<br/><b>Widget ID:</b> %3$s]]></string>
    <string name="ok">Okay</string>
    <string name="come_soon">Coming soon</string>
    <string name="android_version_too_low">Android version is too low</string>
    <string name="add_func_name_hint">Funcation Name</string>
    <string name="add_to_func">Create custom function</string>
    <string name="add_key_event_normal">Add regular button mapping</string>
    <string name="add_key_event_home">HOME button function attachment</string>
    <string name="device_id_error">This button may be a virtual button, please use the volume button, media button or external button, etc.</string>
    <string name="add_to_home">Shortcut</string>
    <string name="added_to_home">Added</string>
    <string name="func_not_found">Function not found</string>
    <string name="app_crashed">ClickClick crash</string>
    <string name="app_crashed_dialog_text">Sorry, ClickClick crashed. Please send a report to me.</string>
    <string name="app_crashed_dialog_comment">You can add a comment here.</string>
    <string name="app_name_xposed">ClickClick X</string>
    <string name="request_write_settings"> Please give permission to modify system settings </string>
    <string name="auto_rotation_turn_off">Automatic rotation is turned off</string>
    <string name="auto_rotation_turn_on">Automatic rotation is turned on</string>
    <string name="add_shortcut">Add shortcut</string>
    <string name="open">Open </string>
    <string name="open_application">Launch a application</string>
    <string name="title_activity_app_list">Choose a application</string>
    <string name="app_can_not_open">Application selected can not be launched</string>
    <string name="notification_filter_all">Do not disturb off</string>
    <string name="notification_filter_priority">Priority only</string>
    <string name="notification_filter_none">Total silence</string>
    <string name="notification_filter_alarms">Alarms only</string>
    <string name="add_notification_func">Simulate clicking a notification widget</string>
    <string name="snack_bar_bindings_off">KeyEvent bindings is disabled.</string>
    <string name="request_camera">Please grant the camera permission</string>
    <string name="create_gesture_hint"><![CDATA[Please click or swipe to create a gesture <br> Press back key to cancel ]]></string>
    <string name="add_tap_or_swipe">Simulate clicks or gestures</string>
    <string name="snack_bar_accessibility_error">System accessibility service is abnormal</string>
    <string name="re_turn_on">Re-switch it</string>
    <string name="to_turn_on">To turn on</string>
    <string name="no_permission_write">No permission to save screenshot</string>

    <string name="screen_shot_notification_title">Screen shot</string>
    <string name="screen_shot_channel_name">ScreenShot</string>
    <string name="screen_shot_channel_description">Notify when screenshot</string>
    <string name="settings_shock_after_run_title">Shock if run successfully</string>
    <string name="change_function">Change function</string>
    <string name="more_functions">More functions …</string>
    <string name="foreground_service_channel_name">Foreground Service</string>
    <string name="foreground_service_description">Foreground service notifications</string>
    <string name="notification_aciton_share">Share</string>
    <string name="send_to">Send to …</string>
    <string name="please_open_notification_in_settings">Please enable the notification access in Settings</string>
    <string name="create_shortcut_failed">Create shortcut failed. Please check the permission settings.</string>
    <string name="settings_get_logcat">Generate log file</string>
    <string name="dump_logs_success">The log file was generated！</string>
    <string name="settings_get_logcat_summary">Log files store at /sdcard/ClickClick/</string>
    <string name="open_accessibility_error">Please enable at Settings->Accessibility->ClickClick</string>
    <string name="no_email_app">No email apps installed</string>
    <string name="no_browser_app">No browser apps installed</string>
    <string name="input_mode">Input Mode</string>
    <string name="input_mode_turn_on">Input Mode</string>
    <string name="input_mode_turn_off">Exit Input Mode</string>
    <string name="settings_app_detect_service_title">App detect service</string>
    <string name="settings_app_detect_service_summary">Optional. This option can help to detect the current in-use application.</string>
    <string name="action_search">Search</string>
    <string name="change_keyevent">Change KeyEvent</string>
    <string name="edit_or_view_it">Edit/View</string>
    <string name="save">Save</string>
    <string name="no_app_shortcut_available">No app shortcut available</string>
    <string name="add_lua_script">Add lua script</string>
    <string name="title_activity_code_editor">Code</string>
    <string name="action_save">Save</string>
    <string name="pkg_not_found">Package not found</string>
    <string name="title_activity_shortcut">Create shortcut of functions</string>
</resources>
