<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.AlertDialogActivity">
    <TextView
        android:layout_gravity="center"
        android:id="@+id/alert_message"
        android:gravity="start"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/alert_btn_1"
            android:layout_alignParentStart="true"
            android:text="@string/cancel"
            android:padding="8dp"
            android:background="?attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/alert_btn_2"
            android:layout_toStartOf="@id/alert_btn_3"
            android:text="@string/btn_add"
            android:paddingTop="8dp"
            android:paddingStart="9dp"
            android:paddingBottom="8dp"
            android:paddingEnd="16dp"
            android:background="?attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/alert_btn_3"
            android:text="@string/run_it"
            android:padding="8dp"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>