<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="240dp"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="xyz.imxqd.mediacontroller.ui.KeyEventActivity">
    <ImageView
        android:id="@+id/key_btn_close"
        android:src="@drawable/ic_close_black_36dp"
        android:alpha="0.5"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/key_tips"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/key_event_activity_tips"
        android:paddingTop="36dp"
        android:paddingBottom="36dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/key_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:padding="8dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/key_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/key_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/key_device_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/key_device_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/key_ignore_device"
            android:text="@string/key_ignore_device"
            android:checked="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/key_btn_add"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/btn_bg_selector"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:src="@drawable/ic_done_white_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"/>
        <TextView
            android:text="@string/btn_add"
            android:textColor="@android:color/white"
            android:layout_margin="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
